--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ async-timeout==3.0.1
 attrs==19.3.0
 cffi==1.14.0
 chardet==3.0.4
-discord.py==1.3.3
+discord.py==1.3.4
 idna==2.10
 idna-ssl==1.1.0
 isort==4.3.21
@@ -21,3 +21,4 @@ typing-extensions==3.7.4.2
 websockets==8.1
 wrapt==1.12.1
 yarl==1.4.2
+youtube-dl==2020.6.16.1
