--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ attrs==19.3.0
 cffi==1.14.0
 chardet==3.0.4
 discord.py==1.4.1
+humanize==2.6.0
 idna==2.10
 idna-ssl==1.1.0
 isort==4.3.21
@@ -17,6 +18,7 @@ six==1.15.0
 toml==0.10.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.2
+wavelink==0.5.1
 websockets==8.1
 wrapt==1.12.1
 yarl==1.4.2
