Fixed dependencies for music cog

--- a/Eggbort/Dockerfile
+++ b/Eggbort/Dockerfile
@@ -1,10 +1,16 @@
-FROM python:3.8-slim-buster
+FROM ubuntu:latest
+
+RUN apt update && \
+    apt upgrade -y && \
+    apt install -y git && \
+    apt install -y python3-pip
 
 WORKDIR /usr/src/app
 
 COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip3 install --no-cache-dir -r requirements.txt
+RUN pip3 install --no-cache-dir -U git+https://github.com/Rapptz/discord-ext-menus.git
 
 COPY . .
 
-CMD [ "python", "./launcher.py" ]
+CMD [ "python3", "./launcher.py" ]
