--- a/Eggbort/requirements.txt
+++ b/Eggbort/requirements.txt
@@ -1,24 +1,27 @@
-aiohttp==3.6.2
-astroid==2.4.2
-async-timeout==3.0.1
-attrs==19.3.0
-cffi==1.14.0
-chardet==3.0.4
-discord.py==1.5.0
-humanize==2.6.0
-idna==2.10
+aiohttp==3.8.4
+aiosignal==1.3.1
+astroid==2.15.4
+async-timeout==4.0.2
+attrs==23.1.0
+cffi==1.15.1
+chardet==5.1.0
+charset-normalizer==3.1.0
+discord.py==2.2.2
+frozenlist==1.3.3
+humanize==4.6.0
+idna==3.4
 idna-ssl==1.1.0
-isort==4.3.21
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-multidict==4.7.6
-pycparser==2.20
-PyNaCl==1.3.0
-six==1.15.0
-toml==0.10.1
-typed-ast==1.4.1
-typing-extensions==3.7.4.2
-wavelink==0.9.6
-websockets==8.1
-wrapt==1.12.1
-yarl==1.4.2
+isort==5.12.0
+lazy-object-proxy==1.9.0
+mccabe==0.7.0
+multidict==6.0.4
+pycparser==2.21
+PyNaCl==1.5.0
+six==1.16.0
+toml==0.10.2
+typed-ast==1.5.4
+typing_extensions==4.5.0
+Wavelink==2.1.0
+websockets==11.0.2
+wrapt==1.15.0
+yarl==1.8.2
