--- a/Eggbort/requirements.txt
+++ b/Eggbort/requirements.txt
@@ -1,27 +1,15 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
-astroid==2.15.4
 async-timeout==4.0.2
 attrs==23.1.0
 cffi==1.15.1
-chardet==5.1.0
 charset-normalizer==3.1.0
 discord.py==2.2.2
 frozenlist==1.3.3
-humanize==4.6.0
 idna==3.4
-idna-ssl==1.1.0
-isort==5.12.0
-lazy-object-proxy==1.9.0
-mccabe==0.7.0
 multidict==6.0.4
 pycparser==2.21
 PyNaCl==1.5.0
-six==1.16.0
-toml==0.10.2
-typed-ast==1.5.4
-typing_extensions==4.5.0
+tomli==2.0.1
 Wavelink==2.1.0
-websockets==11.0.2
-wrapt==1.15.0
 yarl==1.8.2
